<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charBlack"
    tools:context=".editName">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_setting2"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:background="#00000000"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:translationX="20sp"
            android:translationY="30sp"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black">

        </View>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ChangeYourName"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel"
        android:translationY="10sp">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPhone"

            android:layout_centerInParent="true"
            android:backgroundTint="#FFEB3B"
            android:text="@string/ok"
            android:translationY="-70dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextPhone"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_below="@+id/textView2"
            android:layout_centerInParent="true"
            android:background="@drawable/name"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Typeyourname"
            android:inputType="text"
            android:textColorHint="@color/Black"
            android:textColor="@color/Black"
            android:translationY="-135dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:text="@string/EnterYourName"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationY="-200dp" />
    </RelativeLayout>

</RelativeLayout>