<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/charBlack"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_setting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:translationX="20sp"
            android:translationY="30sp"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentBottom="true"
            android:background="#17000005">

        </View>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/EditProfile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:translationY="100sp"
        tools:ignore="ContentDescription" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profileImage">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationY="130sp">


            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingStart="55dp"
                android:text="@string/UserName"

                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:layout_below="@+id/userName"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#17000005"
                android:translationY="15sp"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:translationX="15sp"
                android:translationY="2sp"
                app:srcCompat="@drawable/ic_baseline_person_big"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/button_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view"
                android:background="@null"
                android:gravity="left|center_horizontal"
                android:paddingLeft="20dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:translationY="30sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:layout_below="@+id/view"
                android:layout_alignParentEnd="true"
                android:translationX="-10sp"
                android:translationY="30sp"
                app:srcCompat="@drawable/ic_baseline_edit_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_edit"
                android:layout_marginTop="50sp"
                android:paddingStart="55dp"
                android:text="@string/Color"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_below="@+id/button_edit"
                android:layout_marginTop="40sp"
                android:src="@drawable/ic_baseline_color_lens_24"
                android:translationX="15sp"
                android:translationY="11sp"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:layout_below="@+id/notification"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#17000005"
                android:translationY="15sp"
                tools:ignore="SmallSp" />


            <Button
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:background="@null"
                android:gravity="left|center_horizontal"
                android:paddingLeft="20dp"
                android:text="Profile Color"
                android:textAllCaps="false"
                android:textColor="#C3C3C3"
                android:textSize="15sp"
                android:translationY="30sp"
                tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

            <ImageView
                android:id="@+id/profileColor"
                android:layout_width="15sp"
                android:layout_height="15sp"
                android:layout_below="@+id/view1"
                android:layout_alignParentEnd="true"
                android:background="#555252"
                android:translationX="-10sp"
                android:translationY="30sp"
                tools:ignore="ContentDescription" />


        </RelativeLayout>

    </ScrollView>



</RelativeLayout>